# ReactAI

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  commitlint.config.js  docker-compose.yml  index.html  setup.py  start.sh  visualizacao_com_interesse.html  visualizacao_limpa.html
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md  renovate.json
.github/DISCUSSION_TEMPLATE/: config.yml  help.yml  ideas.yml  showcase.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_request.md  feature_request.md  general_question.md  security_issue.md
.github/community/: CODE_OF_CONDUCT.md  HEALTH_CHECK.md  RELEASE_PROCESS.md  ROADMAP.md  SUPPORT.md
.github/workflows/: ci.yml  ci.yml.disabled  codeql.yml  deploy.yml  deploy.yml.disabled
apps/backend/: Dockerfile  pyproject.toml  requirements.txt
apps/backend/app/services/: __init__.py  emotion_analyzer.py
apps/backend/src/: crud.py  main.py  models.py
apps/frontend/: eslint.config.js  package.json  vite.config.js
apps/frontend/public/: 404.html
apps/frontend/src/: App.css  App.jsx
apps/frontend/src/pages/: AnalysisPage.jsx  HomePage.jsx
backend/: env.example  requirements.txt
backend/app/: __init__.py  database.py  schemas.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js
frontend/src/components/: Navbar.jsx
nginx/: nginx.conf
